PERSONA-22 fix : sort 로직 문제 해결